plugins {
    id 'java'
    id 'maven'
}

group 'com.jfrog.ide'

sourceCompatibility = '1.11'
targetCompatibility = '1.11'

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://releases.jfrog.io/artifactory/oss-releases"
    }
}

def buildInfoVersion = '2.31.0'
dependencies {
    implementation group: 'org.jfrog.buildinfo', name: 'build-info-extractor-npm', version: buildInfoVersion
    implementation group: 'org.jfrog.buildinfo', name: 'build-info-extractor-go', version: buildInfoVersion
    implementation group: 'org.jfrog.buildinfo', name: 'build-info-client', version: buildInfoVersion
    implementation group: 'org.jfrog.buildinfo', name: 'build-info-api', version: buildInfoVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
    implementation group: 'com.jfrog.xray.client', name: 'xray-client-java', version: '0.7.1'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation group: 'org.jfrog.filespecs', name: 'file-specs-java', version: '1.1.0'
    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
    implementation group: 'commons-io', name: 'commons-io', version: '2.9.0'

    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
}

task uberJar(type: Jar) {
    archiveClassifier.set('uber')
    manifest {
        attributes 'Implementation-Version': archiveVersion
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    with jar
}

jar {
    manifest {
        attributes 'Implementation-Version': archiveVersion
    }
}

//noinspection GroovyAssignabilityCheck
task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier.set('sources')
    from sourceSets.main.allSource
}

test {
    useTestNG() {
        useDefaultListeners = true
    }
    testLogging {
        exceptionFormat "full"
        events "started", "passed", "skipped", "failed", "standardOut", "standardError"
        minGranularity 0
    }
}

artifacts {
    archives sourcesJar
    archives uberJar
}

